--- a/src/themes/app.mat.styl
+++ b/src/themes/app.mat.styl
@@ -5,12 +5,15 @@
 // App Shared Variables
 // --------------------------------------------------
 // Shared Stylus variables go in the app.variables.styl file
+
 @import 'app.variables'
 
 // Quasar Material Design Stylus
 // --------------------------------------------------
 // Custom App variables must be declared before importing Quasar.
 // Quasar will use its default values when a custom variable isn't provided.
+
+$z-side = 2001
 
 $generic-border-radius ?= 2px
 $generic-input-size ?= 25px
@@ -24,5 +27,7 @@ $toolbar-active-color ?= $primary
 $toolbar-faded-color ?= composite-color($primary)
 
 @import '~quasar-framework/dist/quasar.mat.styl'
+
+
 
 
