--- a/src/themes/app.variables.styl
+++ b/src/themes/app.variables.styl
@@ -16,7 +16,8 @@
 // It's highly recommended to change the default colors
 // to match your app's branding.
 
-$primary   = #2196F3
+$dark-primary = #0097A7
+$primary   = #00BCD4
 $secondary = #26A69A
 $tertiary  = #555
 
