--- a/src/themes/app.ios.styl
+++ b/src/themes/app.ios.styl
@@ -24,4 +24,4 @@ $toolbar-active-color ?= $light
 $toolbar-faded-color ?= composite-color($toolbar-color)
 
 @import '~quasar-framework/dist/quasar.ios.styl'
-
+@import 'app.custom.styl'
