--- a/src/themes/app.mat.styl
+++ b/src/themes/app.mat.styl
@@ -27,6 +27,7 @@ $toolbar-active-color ?= $primary
 $toolbar-faded-color ?= composite-color($primary)
 
 @import '~quasar-framework/dist/quasar.mat.styl'
+@import 'app.custom.styl'
 
 
 
